新增上传头像系统，包含区分文件和头像的status状态，0为文件，1为头像 新增添加专业接口 新增修改专业状态接口 新增删除专业接口 新增查询所有专业接口