@@ -10,8 +10,8 @@ import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * 定时清理脏文件任务
@@ -23,6 +23,9 @@ public class FileCleanupTask {
     @Value("${file.upload-dir}")
     private String uploadPath;
 
+    @Value("${file.upload-avatar-dir}")
+    private String uploadAvatarDir;
+
     @Resource
     private UploadFileMapper uploadFileMapper;
 
@@ -31,46 +34,69 @@ public class FileCleanupTask {
      */
     @Scheduled(cron = "0 0 2 * * ?")
     public void cleanupOrphanFiles() {
-        log.info("开始执行脏文件清理任务，扫描目录: {}", uploadPath);
+        log.info("开始执行脏文件清理任务");
 
-        Path uploadDir = Paths.get(uploadPath);
+        // 支持多个上传目录
+        Map<String, String> uploadDirs = new HashMap<>();
+        uploadDirs.put("通用上传目录", uploadPath);
+        uploadDirs.put("头像上传目录", uploadAvatarDir);
 
-        // 检查目录是否存在
-        if (!Files.exists(uploadDir)) {
-            log.warn("上传目录不存在: {}", uploadPath);
-            return;
-        }
-
-        if (!Files.isDirectory(uploadDir)) {
-            log.error("上传路径不是目录: {}", uploadPath);
-            return;
-        }
-
+        // 1. 获取数据库中所有 filepath 的文件名（只取文件名）
+        Set<String> dbFilenameSet;
         try {
-            // 1. 获取数据库中所有 filepath 的文件名（只取文件名，不带路径）
-            List<String> dbFilenames = uploadFileMapper.findAllFilepaths()
-                    .stream()
-                    .map(path -> Paths.get(path).getFileName().toString()) // 只取文件名
-                    .filter(name -> !name.trim().isEmpty())
-                    .toList();
-
-            Set<String> dbFilenameSet = Set.copyOf(dbFilenames); // 转为 Set 提高查询效率
+            List<String> dbFilenames = uploadFileMapper.findAllFilepaths();
+            if (dbFilenames == null || dbFilenames.isEmpty()) {
+                log.warn("数据库中未查询到任何文件记录");
+                dbFilenameSet = Collections.emptySet();
+            } else {
+                dbFilenameSet = dbFilenames.stream()
+                        .map(path -> {
+                            if (path == null) return null;
+                            return Paths.get(path).getFileName().toString();
+                        })
+                        .filter(name -> name != null && !name.trim().isEmpty())
+                        .collect(Collectors.toSet());
+            }
             log.info("数据库中记录的文件数量: {}", dbFilenameSet.size());
+        } catch (Exception e) {
+            log.error("查询数据库文件记录失败", e);
+            return; // 如果数据库都查不了，就不清理了
+        }
 
-            // 2. 扫描文件目录下的所有文件
-            File dir = uploadDir.toFile();
-            File[] files = dir.listFiles(f -> f.isFile() && !f.isHidden()); // 排除隐藏文件
+        int totalDeleted = 0;
 
-            if (files == null) {
-                log.info("目录为空或无法读取: {}", uploadPath);
-                return;
+        // 2. 遍历每个上传目录
+        for (Map.Entry<String, String> entry : uploadDirs.entrySet()) {
+            String dirName = entry.getKey();
+            String dirPath = entry.getValue();
+
+            log.info("正在扫描 {}: {}", dirName, dirPath);
+
+            Path uploadDir = Paths.get(dirPath);
+
+            // 检查目录是否存在
+            if (!Files.exists(uploadDir)) {
+                log.warn("{} 不存在: {}", dirName, dirPath);
+                continue;
             }
 
-            log.info("文件系统中文件数量: {}", files.length);
+            if (!Files.isDirectory(uploadDir)) {
+                log.error("{} 不是目录: {}", dirName, dirPath);
+                continue;
+            }
+
+            File dir = uploadDir.toFile();
+            File[] files = dir.listFiles(f -> f.isFile() && !f.isHidden());
+            if (files == null || files.length == 0) {
+                log.info("{} 为空或无法读取: {}", dirName, dirPath);
+                continue;
+            }
+
+            log.info("{} 中文件数量: {}", dirName, files.length);
 
             int deletedCount = 0;
 
-            // 3. 遍历文件，判断是否为脏文件
+            // 遍历文件，判断是否为脏文件
             for (File file : files) {
                 String filename = file.getName();
 
@@ -78,22 +104,21 @@ public class FileCleanupTask {
                     try {
                         boolean deleted = file.delete();
                         if (deleted) {
-                            log.info("已删除脏文件: {}", filename);
+                            log.info("已删除脏文件 [{}]: {}", dirName, filename);
                             deletedCount++;
+                            totalDeleted++;
                         } else {
-                            log.warn("无法删除文件（权限问题？）: {}", filename);
+                            log.warn("无法删除文件（权限问题？） [{}]: {}", dirName, filename);
                         }
                     } catch (Exception e) {
-                        log.error("删除文件失败: {}", filename, e);
+                        log.error("删除文件失败 [{}]: {}", dirName, filename, e);
                     }
                 }
-                // else: 文件在数据库中有记录，跳过
             }
 
-            log.info("脏文件清理任务完成，共删除 {} 个文件", deletedCount);
-
-        } catch (Exception e) {
-            log.error("执行脏文件清理任务时发生异常", e);
+            log.info("{} 清理完成，共删除 {} 个脏文件", dirName, deletedCount);
         }
+
+        log.info("脏文件清理任务完成，总计删除 {} 个文件", totalDeleted);
     }
 }
